# rats

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  KNOWN_ISSUES.md  README.md  TEST_RESULTS.md  index.html  package-lock.json  package.json  sample-data.csv
.github/workflows/: build.yml  main.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  EXCEL_FEATURE_COMPARISON.md  FIXES_SUMMARY.md  README.md  SESSION_SUMMARY.md  TECHNICAL.md  TEST_REPORT.md
src/: main.js  style.css  virtualScroll.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/duckdb_core/: mod.rs
src-tauri/src/editor/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/import/: mod.rs
src-tauri/src/statistics/: mod.rs
