[package]
name = "rats"
version = "0.1.0"
description = "Desktop data analysis tool with Excel-like interface"
authors = ["rats-team"]
edition = "2021"

[lib]
name = "rats_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
duckdb = { version = "1.1", features = ["bundled"] }
csv = "1.3"
calamine = { version = "0.26", features = ["dates"] }
thiserror = "2.0"
anyhow = "1.0"
statrs = "0.17"
xlsxwriter = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
